--- a/index.html
+++ b/index.html
@@ -19,14 +19,27 @@
             <form>
                 <label for="city">Search For A City:</label><br>
                 <input  id="city-search" type="text" name="cityname">
-                <button type="button">Search</button>
+                <button id="search-btn" type="button">Search</button>
             </form>
         </div>
-        <div id="weather-display"></div>
+        <div id="weather-display">
+            <h2 id="city-name"></h2>
+            <p id="temp"></p>
+            <p id="wind"></p>
+            <p id="humidity"></p>
+            <p id="uv-index"></p>
+        </div>
+        <div id="weather-forecast">
+            <div id="day-one"></div>
+            <div id="day-two"></div>
+            <div id="day-three"></div>
+            <div id="day-four"></div>
+            <div id="day-five"></div>
+        </div>
     </main>
 
 
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="./assets/js/script.js"></script>
 </body>
