--- a/index.html
+++ b/index.html
@@ -32,13 +32,14 @@
             </div>
          </div>
        </div> 
-       <div class="container">
+       <div class="container forecast-container">
         <div id="weather-forecast" class="row justify-content-end">
-            <div id="day-one" class="col-2 card"></div>
-            <div id="day-two" class="col-2 card"></div>
-            <div id="day-three" class="col-2 card"></div>
-            <div id="day-four" class="col-2 card"></div>
-            <div id="day-five" class="col-2 card"></div>
+            <h2 id="forecast-header"></h2>
+            <div id="day-one" class="col-2"></div>
+            <div id="day-two" class="col-2"></div>
+            <div id="day-three" class="col-2"></div>
+            <div id="day-four" class="col-2"></div>
+            <div id="day-five" class="col-2"></div>
         </div>
         </div>
     </main>
